09-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlr-dev-fe-dpl
  namespace: mlr-dev-fe-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: 192.168.56.200/mylittlerecipebook/mlr-dev-fe-img:latest
        ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlr-dev-be-dpl
  namespace: mlr-dev-be-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: 192.168.56.200/mylittlerecipebook/mlr-dev-be-img:latest
        ports:
        - containerPort: 3000
---
