10-StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mlr-dev-db-sts
  namespace: mlr-dev-db-ns
spec:
  serviceName: mlr-dev-db-svc
  replicas: 3
  selector:
    matchLabels:
      app: database
      tier: web
  template:
    metadata:
      labels:
        app: database
        tier: web
    spec:
      containers:
      - name: mongodb
        image: 192.168.56.200/mylittlerecipebook/mongo:4
        ports:
        - containerPort: 27017
        command:
        - /bin/sh
        - -c
        - |
          if [ "$(hostname)" == "mlr-dev-db-sts-0" ]; then
            mongo --eval "rs.initiate({_id: 'rs0', members: [{_id: 0, host: 'mlr-dev-db-svc-fst.mlr-dev-db-svc.mlr-dev-db-ns.svc.cluster.local:27017'}]})"
            mongo --eval "rs.add({_id: 1, host: 'mlr-dev-db-svc-scd.mlr-dev-db-svc.mlr-dev-db-ns.svc.cluster.local:27017'})"
            mongo --eval "rs.add({_id: 2, host: 'mlr-dev-db-svc-trd.mlr-dev-db-svc.mlr-dev-db-ns.svc.cluster.local:27017'})"
          else
            until mongo --eval "rs.status()" | grep -q PRIMARY; do
              sleep 1
            done
            mongo --eval "rs.status()"
          fi
        volumeMounts:
        - name: mongodb-storage
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: mongodb-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
      storageClassName: openebs-hostpath
