09-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlr-dev-fe-svc
  namespace: mlr-dev-fe-ns
spec:
  selector:
    app: frontend
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 4000
    targetPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: mlr-dev-be-svc-nod
  namespace: mlr-dev-be-ns
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: mlr-dev-be-svc-fap
  namespace: mlr-dev-be-ns
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: mlr-dev-db-svc-sts
  namespace: mlr-dev-db-ns
spec:
  selector:
    app: database
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mlr-dev-db-svc-fst
  namespace: mlr-dev-db-ns
spec:
  selector:
    app: database
  type: NodePort
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
    nodePort: 32301
---
apiVersion: v1
kind: Service
metadata:
  name: mlr-dev-db-svc-scd
  namespace: mlr-dev-db-ns
spec:
  selector:
    app: database
  type: NodePort
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
    nodePort: 32302
---
apiVersion: v1
kind: Service
metadata:
  name: mlr-dev-db-svc-trd
  namespace: mlr-dev-db-ns
spec:
  selector:
    app: database
  type: NodePort
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
    nodePort: 32303
